<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ba_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay.Dark"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/ba_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/dimen_form_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ba_gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ba_appBarLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ba_textInputLayout_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_textInputLayout_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ba_textInputEditText_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_mail"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ba_textInputLayout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_textInputLayout_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ba_textInputEditText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_name"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ba_textInputLayout_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_textInputLayout_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ba_textInputEditText_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_pw"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ba_textInputLayout_checkPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_textInputLayout_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ba_textInputEditText_checkPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_checkPw"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ba_bt_createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="onClick"
            android:text="@string/string_createAccount" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/ba_gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_alreadyAccount" />

        <TextView
            android:id="@+id/ba_tv_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_stringClick_margin"
            android:onClick="onClick"
            android:text="@string/string_signIn"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>